# serializer version: 1
# name: test_all_cover_entities[cover.bedroom_blind-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.bedroom_blind',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'junghome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 191>,
    'translation_key': None,
    'unique_id': 'bedroom_blind_001',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_cover_entities[cover.bedroom_blind-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 40,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'blind',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Blind',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 191>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.bedroom_blind',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_all_cover_entities[cover.kitchen_shade-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.kitchen_shade',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'junghome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'kitchen_shade_001',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_cover_entities[cover.kitchen_shade-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 100,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Shade',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.kitchen_shade',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
